--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,18 +4,18 @@
   "icons": [
     {
       "src": "citralfloLogo.png",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "32x32",
       "type": "image/x-icon"
     },
     {
       "src": "citralfloLogo.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "32x32"
     },
     {
       "src": "citralfloLogo.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "32x32"
     }
   ],
   "start_url": ".",
