--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.22.0",
+    "@babel/preset-env": "^7.22.0",
     "@react-three/cannon": "^6.5.2",
     "@react-three/drei": "^9.65.3",
     "@react-three/fiber": "^8.12.0",
@@ -12,7 +14,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "three": "^0.151.3",
     "web-vitals": "^2.1.4"
   },
