--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/parallax": "^9.7.2",
     "@react-three/cannon": "^6.5.2",
     "@react-three/drei": "^9.65.3",
     "@react-three/fiber": "^8.12.0",
